Freedom Sanbox Ant Deploy/src/objects/General_Insurance_ET__c.object
<CustomObject>
    <description>Created for ET</description>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Cheque Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <label>Insured</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>General Insurance</relationshipLabel>
        <relationshipName>General_Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pol_Doc_Recd_Status__c</fullName>
        <label>Pol Doc Recd Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Policy_Number__c</fullName>
        <label>Previous Policy Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Renewal Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Remark__c</fullName>
        <label>Renewal Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Commencement_Date__c</fullName>
        <label>Risk Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_Insured__c</fullName>
        <label>Sum Insured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <label>Update Date</label>
        <type>Date</type>
    </fields>
    <label>General Insurance</label>
    <nameField>
        <label>General Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>